--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ z-index: 1;
 .section-promo{
     padding-top: 350px;
     padding-bottom: 187px;
-    background: url('../img/header-bg.png') no-repeat center/cover;
+    background: url('../img/header-bg.webp') no-repeat center/cover;
     color:#FFFFFF;
     margin-top: -180px;
     position: relative;
@@ -117,16 +117,16 @@ margin-bottom: 20px;
 }
 
 .face{
-    background:url('../img/Face.svg') no-repeat center ;
+    background:url('../img/Face.svg') no-repeat center ;
 }
 
 .inst{
     margin-bottom: 0;
-    background:url('../img/inst.svg') no-repeat center ;
+    background:url('../img/inst.svg') no-repeat center ;
 }
 
 .Tvite{
-    background:url('../img/Tvite.svg') no-repeat center ;
+    background:url('../img/Tvite.svg') no-repeat center ;
 }
    
 
@@ -237,7 +237,7 @@ border-radius: 5px;
 position: absolute;
 width: 40px;
 height: 40px;
-background:#FFFFFF url('../img/arrow-down.svg') no-repeat center;
+background:#FFFFFF url('../img/arrow-down.svg') no-repeat center;
 border-radius:50%;
 left: 50%;
 bottom: 70px;
@@ -326,7 +326,7 @@ line-height: 24px;
 ====================================================================================================*/
 
 .section__our-team{
-    background: url('../img/specialty\'s-bg.png') no-repeat center/cover;
+    background: url('../img/master.webp') no-repeat center/cover;
     
     padding-bottom: 100px;
     position: relative;
@@ -468,7 +468,7 @@ padding-left: 20px;
 ====================================================================================================*/
 
 .section__specialties{
-    background: url('../img/specialty\'s-bg\ \(1\).png') no-repeat center/cover;
+    background: url('../img/private-bg.webp') no-repeat center/cover;
    
     padding-bottom: 100px;
     position: relative;
@@ -510,8 +510,101 @@ padding-left: 20px;
 
 
 
+.info__delicious{
+    max-width: 550px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    
+    flex-direction: column;
+    margin: auto;
+}
 
+.delic-text {
+    text-align: center;
+    text-transform: uppercase;
+    color: #000000;
+    font-size: 36px;
+    line-height: 48px;
+    }
 
+    .del-sub__title{
+        margin-top: 40px;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+        font-weight: bold;
+        font-size: 18px;
+        line-height: 28px;
+        
+        }
+
+        .delicious-links{
+            width: 840px;
+            width: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            margin-top: 50px;
+        }
+        
+        .delic-link{
+            
+            text-decoration: none;
+            margin-left: 20px;
+            color: #333333;
+            font-size: 12px;
+        line-height: 18px;
+        text-transform: uppercase;
+        font-style: normal;
+        font-weight: bold;
+        border-right: 1px solid rgba(51, 51, 51, 0.2);;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-right: 50px;
+        margin-left: 50px;
+        
+        }
+
+        .stagion{
+            margin-top: 40px;
+        }
+
+        .block__colum{
+            display: flex;
+            justify-content: space-between;
+            padding-top: 51px;
+            padding-bottom: 100px;
+            flex-wrap: wrap;
+        }
+
+        .menu-title{
+            display: inline-block;
+            flex-direction: column;
+            margin-left: 10px;
+            font-size: 18px;
+        line-height: 18px;
+        font-family: 'Banny';
+        }
+        
+        .money{
+            margin-left: 10px;
+            font-size: 18px;
+        line-height: 18px;
+        font-family: 'Banny';
+        
+        }
+        
+        
+        .sub-menu{
+            display: block;
+            font-size: 14px;
+        margin-left: 10px;
+        margin-top: 1px;
+        color: rgba(51, 51, 51, 0.5);
+        
+        }
+/* 
 .section__delicious{
     padding-top: 100px;
     padding-bottom: 100px;
@@ -529,24 +622,9 @@ padding-left: 20px;
 }
 
 
-.delic-text {
-text-align: center;
-text-transform: uppercase;
-color: #000000;
-font-size: 36px;
-line-height: 48px;
-}
 
-.del-sub__title{
-margin-top: 40px;
-display: flex;
-justify-content: center;
-text-align: center;
-font-weight: bold;
-font-size: 18px;
-line-height: 28px;
 
-}
+
 
 
 .delicious-links{
@@ -623,7 +701,7 @@ margin-left: 10px;
 margin-top: 1px;
 color: rgba(51, 51, 51, 0.5);
 
-}
+} */
 
 /*====================================================================================================
                                                       delicious-menu end
@@ -734,7 +812,7 @@ margin: 0;
 .section__private{
     padding-top: 50px;
     
-    background: url('../img/specialty\'s-bg\ \(1\).png') no-repeat center/cover;
+    background: url('../img/private-bg.webp') no-repeat center/cover;
    
     padding-bottom: 50px;
     position: relative;
@@ -817,7 +895,7 @@ margin-top: 50px;
     position: absolute;
 width: 80px;
 height: 475px;
-left: 396px;
+left: 397px;
 top: 0;
 
 background: #000000;
@@ -827,6 +905,7 @@ border-radius: 0px 5px 5px 0px;
 
 .ring{
     position: relative;
+    border-radius: 5px;
 }
 
 .rotate__right{
