--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,10 @@ left: -25%;
     
 }
 
+.block__about{
+    display: flex;
+}
+
 
 
 .section__text{
@@ -282,11 +286,12 @@ left: -25%;
     max-width: 600px;
     width: 100%;
     text-align: center;
+    margin-top: 60px;
 }
 
 .block-img{
     display: flex;
-    justify-content: start;
+    justify-content: center;
     max-width: 600px;
     width: 100%;
     position: relative;
@@ -324,7 +329,9 @@ line-height: 24px;
 /*====================================================================================================
                                                       our-team
 ====================================================================================================*/
-
+.container__block{
+    display: flex;
+}
 .section__our-team{
     background: url('../img/master.webp') no-repeat center/cover;
     
@@ -375,7 +382,7 @@ padding-top: 60px;
 
 .block-img__right{
     display: flex;
-    justify-content: start;
+    justify-content: center;
     max-width: 600px;
     width: 100%;
     position: relative;
@@ -389,7 +396,7 @@ padding-top: 60px;
     height: 210px;
     position: absolute;
     top: 50%;
-    left: -100px;
+    left: -50px;
     margin-top: -125px;
     
 }
@@ -507,7 +514,29 @@ padding-left: 20px;
 ====================================================================================================*/
 
 
+.section__delicious{
+    padding-top: 70px;
+}
 
+.column__two{
+    margin-right: 50px;
+}
+
+
+.delic-linknb{
+    text-decoration: none;
+    margin-left: 20px;
+    color: #333333;
+    font-size: 12px;
+line-height: 18px;
+text-transform: uppercase;
+font-style: normal;
+font-weight: bold;
+padding-top: 20px;
+padding-bottom: 20px;
+padding-right: 50px;
+margin-left: 50px;
+}
 
 
 .info__delicious{
@@ -604,104 +633,7 @@ padding-left: 20px;
         color: rgba(51, 51, 51, 0.5);
         
         }
-/* 
-.section__delicious{
-    padding-top: 100px;
-    padding-bottom: 100px;
-    
-}
 
-.info__delicious{
-    max-width: 550px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    
-    flex-direction: column;
-    margin: auto;
-}
-
-
-
-
-
-
-
-.delicious-links{
-    width: 840px;
-    width: 100%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    margin-top: 50px;
-}
-
-.delic-link{
-    
-    text-decoration: none;
-    margin-left: 20px;
-    color: #333333;
-    font-size: 12px;
-line-height: 18px;
-text-transform: uppercase;
-font-style: normal;
-font-weight: bold;
-border-right: 1px solid rgba(51, 51, 51, 0.2);;
-padding-top: 20px;
-padding-bottom: 20px;
-padding-right: 50px;
-margin-left: 50px;
-
-}
-
-.nm{
-    margin: 0;
-}
-
-
-.nb{
-    border: none;
-}
-
-.price-block{
-    margin-top: 51px;
-    display: flex;
-    flex-wrap: wrap;
-    
-}
-
-.stagion{
-    margin-top: 40px;
-   margin-right: 60px;
-   
-}
-
-.menu-title{
-    display: inline-block;
-    flex-direction: column;
-    margin-left: 10px;
-    font-size: 18px;
-line-height: 18px;
-font-family: 'Banny';
-}
-
-.money{
-    margin-left: 10px;
-    font-size: 18px;
-line-height: 18px;
-font-family: 'Banny';
-
-}
-
-
-.sub-menu{
-    display: block;
-    font-size: 14px;
-margin-left: 10px;
-margin-top: 1px;
-color: rgba(51, 51, 51, 0.5);
-
-} */
 
 /*====================================================================================================
                                                       delicious-menu end
@@ -848,7 +780,7 @@ margin: 0;
 
 .block_img-flower{
     margin-top: 60px;
-    margin-left: 180px;
+    margin-left: 100px;
     position: relative;
     display: flex;
 }
@@ -895,7 +827,7 @@ margin-top: 50px;
     position: absolute;
 width: 80px;
 height: 475px;
-left: 397px;
+left: 459px;
 top: 0;
 
 background: #000000;
@@ -958,11 +890,12 @@ transform: rotate(90deg);
     width: 100%;
     display: flex;
 justify-content: center;
+flex-wrap: wrap;
 }
 
 
 .img__gallery{
-    max-width:800px ;
+    max-width:360px ;
    
     width: 100%;
     align-items: center;
@@ -995,3 +928,168 @@ justify-content: center;
 /*====================================================================================================
                                                       footer end
 ====================================================================================================*/
+
+/*====================================================================================================
+                                                      mobile__sett
+====================================================================================================*/
+/*Nest Hub 1024 */
+/* Surface pro 7  (912px) */
+/* iPad Air (820px) */
+/* iPad mini (768px) */
+/* Surface Duo (540px) */
+/* Iphone XR 414px */
+/* 12 pro 390px */
+/* 6/7/8 375px */
+/* 5 320px */
+/* Galaxy fold 280px */
+
+@media(max-width: 1380px){
+    .block-img__right::after{
+        content:'';
+        border :20px solid #E8C300;
+        width: 210px;
+        height: 210px;
+        position: absolute;
+        top: 50%;
+        left: 0px;
+        margin-top: -125px;
+    }
+
+    .block-img::after{
+        content: '';
+    border: 20px solid #E8C300;
+    width: 210px;
+    height: 210px;
+    position: absolute;
+    top: 50%;
+    right: 0px;
+    margin-top: -125px;
+    }
+
+    .block_img-flower::after{
+        content: '';
+    border: 20px solid #E8C300;
+    width: 210px;
+    height: 210px;
+    position: absolute;
+    top: 50%;
+    right: -65px;
+    margin-top: -123px;
+    }
+}
+
+@media(max-width: 1270px){
+
+    .block__colum{
+        justify-content: center;
+        
+    }
+
+    .column__one{
+        margin-right: 50px;
+    }
+
+    .block-img__right::after{
+        display: none;
+    }
+
+    .block-img::after{
+        display: none;
+    }
+
+    .block_img-flower::after{
+        display: none;
+    }
+
+    .contact__form{
+        text-align: center;
+        
+    }
+    .comm__contact{
+        justify-content: center;
+    }
+
+    .form{
+        max-width: 300px;
+        width: 50%;
+    }
+    
+    
+    .messenger{
+       max-width: 910px;
+       height: 120px;
+       width: 99%;
+    }
+
+    .button-comm{
+        max-width: 280px;
+        width: 100%;
+       margin-left: 58px;
+    }
+
+}
+
+@media(max-width: 1050px){
+   .block__about{
+       flex-direction: column;
+       margin-left: 220px;
+   }
+
+   .container__block{
+       flex-direction: column;
+   }
+
+   .mob__our{
+       margin-left: 220px;
+   }
+
+   .us__mob__img{
+       margin-top: 20px;
+   }
+
+   .our__text{
+       margin-left: 220px;
+   }
+
+   .form__mobile{
+       margin-left: 220px;
+   }
+
+   .mob__spec{
+       margin-left: 220px;
+   }
+
+   .ice__mob{
+       margin-left: 220px;
+   }
+
+   .time__mob{
+       margin-top: 20px;
+       margin-left: 220px;
+   }
+
+   .private__info{
+       flex-direction: column;
+       margin-left: 220px;
+   }
+
+   .block_img-flower{
+       margin: 0;
+
+   }
+
+   .ring{
+       margin-bottom: 20px;
+   }
+  
+}
+
+@media(max-width: 970px){
+    .promo-title{
+        font-size: 76px;
+    }
+
+    .promo-text{
+        margin: 0;
+    }
+}
